#10 df: Bug: shifted the scenario description to its own function

--- a/src/index.css
+++ b/src/index.css
@@ -200,3 +200,7 @@ body,
 	right: 5px;
 	cursor: pointer;
 }
+
+.bold-text {
+	font-weight: bold;
+}
